JBTM-1390 Update BaseCrashTest to use global jvm arguments